src/eval/generated/EVALParser.ts

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { EVALParserListener } from "./EVALParserListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class EVALParser extends antlr.Parser {
    public static readonly INT = 1;
    public static readonly FLOAT = 2;
    public static readonly STRING_TYPE = 3;
    public static readonly BOOL = 4;
    public static readonly CONST = 5;
    public static readonly IF = 6;
    public static readonly ELSE = 7;
    public static readonly FOR = 8;
    public static readonly WHILE = 9;
    public static readonly BREAK = 10;
    public static readonly CONTINUE = 11;
    public static readonly RETURN = 12;
    public static readonly TRY = 13;
    public static readonly CATCH = 14;
    public static readonly NULL = 15;
    public static readonly TRUE = 16;
    public static readonly FALSE = 17;
    public static readonly PRINT = 18;
    public static readonly CAST = 19;
    public static readonly POW = 20;
    public static readonly SQRT = 21;
    public static readonly MIN = 22;
    public static readonly MAX = 23;
    public static readonly ROUND = 24;
    public static readonly ABS = 25;
    public static readonly PI = 26;
    public static readonly DAYS_IN_WEEK = 27;
    public static readonly HOURS_IN_DAY = 28;
    public static readonly YEAR = 29;
    public static readonly AND_OP = 30;
    public static readonly OR_OP = 31;
    public static readonly NOT_OP = 32;
    public static readonly INCREMENT = 33;
    public static readonly DECREMENT = 34;
    public static readonly PLUS_ASSIGN = 35;
    public static readonly MINUS_ASSIGN = 36;
    public static readonly MULTI_ASSIGN = 37;
    public static readonly DIV_ASSIGN = 38;
    public static readonly PLUS = 39;
    public static readonly MINUS = 40;
    public static readonly MULTI = 41;
    public static readonly DIVIDE = 42;
    public static readonly MODULUS = 43;
    public static readonly EQ = 44;
    public static readonly NEQ = 45;
    public static readonly LTE = 46;
    public static readonly GTE = 47;
    public static readonly LT = 48;
    public static readonly GT = 49;
    public static readonly ASSIGN = 50;
    public static readonly LBRACE = 51;
    public static readonly RBRACE = 52;
    public static readonly LPAREN = 53;
    public static readonly RPAREN = 54;
    public static readonly LBRACKET = 55;
    public static readonly RBRACKET = 56;
    public static readonly COMMA = 57;
    public static readonly SEMICOLON = 58;
    public static readonly REAL = 59;
    public static readonly INTEGER = 60;
    public static readonly STRING = 61;
    public static readonly IDENTIFIER = 62;
    public static readonly WS = 63;
    public static readonly LINE_COMMENT = 64;
    public static readonly BLOCK_COMMENT = 65;
    public static readonly RULE_program = 0;
    public static readonly RULE_statement = 1;
    public static readonly RULE_block = 2;
    public static readonly RULE_variableDeclaration = 3;
    public static readonly RULE_constDeclaration = 4;
    public static readonly RULE_assignment = 5;
    public static readonly RULE_assignOp = 6;
    public static readonly RULE_breakStatement = 7;
    public static readonly RULE_continueStatement = 8;
    public static readonly RULE_type = 9;
    public static readonly RULE_expression = 10;
    public static readonly RULE_builtinFunc = 11;
    public static readonly RULE_builtinCallStatement = 12;
    public static readonly RULE_castCall = 13;
    public static readonly RULE_powCall = 14;
    public static readonly RULE_sqrtCall = 15;
    public static readonly RULE_minCall = 16;
    public static readonly RULE_maxCall = 17;
    public static readonly RULE_roundCall = 18;
    public static readonly RULE_absCall = 19;
    public static readonly RULE_macroValue = 20;
    public static readonly RULE_printStatement = 21;
    public static readonly RULE_printArg = 22;
    public static readonly RULE_ifStatement = 23;
    public static readonly RULE_whileStatement = 24;
    public static readonly RULE_tryStatement = 25;

    public static readonly literalNames = [
        null, "'int'", "'float'", "'string'", "'bool'", "'const'", "'if'", 
        "'else'", "'for'", "'while'", "'break'", "'continue'", "'return'", 
        "'try'", "'catch'", "'null'", "'true'", "'false'", "'print'", "'cast'", 
        "'pow'", "'sqrt'", "'min'", "'max'", "'round'", "'abs'", "'PI'", 
        "'DAYS_IN_WEEK'", "'HOURS_IN_DAY'", "'YEAR'", "'&&'", "'||'", "'!'", 
        "'++'", "'--'", "'+='", "'-='", "'*='", "'/='", "'+'", "'-'", "'*'", 
        "'/'", "'%'", "'=='", "'!='", "'<='", "'>='", "'<'", "'>'", "'='", 
        "'{'", "'}'", "'('", "')'", "'['", "']'", "','", "';'"
    ];

    public static readonly symbolicNames = [
        null, "INT", "FLOAT", "STRING_TYPE", "BOOL", "CONST", "IF", "ELSE", 
        "FOR", "WHILE", "BREAK", "CONTINUE", "RETURN", "TRY", "CATCH", "NULL", 
        "TRUE", "FALSE", "PRINT", "CAST", "POW", "SQRT", "MIN", "MAX", "ROUND", 
        "ABS", "PI", "DAYS_IN_WEEK", "HOURS_IN_DAY", "YEAR", "AND_OP", "OR_OP", 
        "NOT_OP", "INCREMENT", "DECREMENT", "PLUS_ASSIGN", "MINUS_ASSIGN", 
        "MULTI_ASSIGN", "DIV_ASSIGN", "PLUS", "MINUS", "MULTI", "DIVIDE", 
        "MODULUS", "EQ", "NEQ", "LTE", "GTE", "LT", "GT", "ASSIGN", "LBRACE", 
        "RBRACE", "LPAREN", "RPAREN", "LBRACKET", "RBRACKET", "COMMA", "SEMICOLON", 
        "REAL", "INTEGER", "STRING", "IDENTIFIER", "WS", "LINE_COMMENT", 
        "BLOCK_COMMENT"
    ];
    public static readonly ruleNames = [
        "program", "statement", "block", "variableDeclaration", "constDeclaration", 
        "assignment", "assignOp", "breakStatement", "continueStatement", 
        "type", "expression", "builtinFunc", "builtinCallStatement", "castCall", 
        "powCall", "sqrtCall", "minCall", "maxCall", "roundCall", "absCall", 
        "macroValue", "printStatement", "printArg", "ifStatement", "whileStatement", 
        "tryStatement",
    ];

    public get grammarFileName(): string { return "EVALParser.g4"; }
    public get literalNames(): (string | null)[] { return EVALParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return EVALParser.symbolicNames; }
    public get ruleNames(): string[] { return EVALParser.ruleNames; }
    public get serializedATN(): number[] { return EVALParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, EVALParser._ATN, EVALParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public program(): ProgramContext {
        let localContext = new ProgramContext(this.context, this.state);
        this.enterRule(localContext, 0, EVALParser.RULE_program);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 55;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 274046) !== 0) || _la === 51 || _la === 62) {
                {
                {
                this.state = 52;
                this.statement();
                }
                }
                this.state = 57;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 58;
            this.match(EVALParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public statement(): StatementContext {
        let localContext = new StatementContext(this.context, this.state);
        this.enterRule(localContext, 2, EVALParser.RULE_statement);
        try {
            this.state = 70;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case EVALParser.INT:
            case EVALParser.FLOAT:
            case EVALParser.STRING_TYPE:
            case EVALParser.BOOL:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 60;
                this.variableDeclaration();
                }
                break;
            case EVALParser.CONST:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 61;
                this.constDeclaration();
                }
                break;
            case EVALParser.IDENTIFIER:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 62;
                this.assignment();
                }
                break;
            case EVALParser.IF:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 63;
                this.ifStatement();
                }
                break;
            case EVALParser.WHILE:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 64;
                this.whileStatement();
                }
                break;
            case EVALParser.TRY:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 65;
                this.tryStatement();
                }
                break;
            case EVALParser.BREAK:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 66;
                this.breakStatement();
                }
                break;
            case EVALParser.CONTINUE:
                this.enterOuterAlt(localContext, 8);
                {
                this.state = 67;
                this.continueStatement();
                }
                break;
            case EVALParser.PRINT:
                this.enterOuterAlt(localContext, 9);
                {
                this.state = 68;
                this.builtinCallStatement();
                }
                break;
            case EVALParser.LBRACE:
                this.enterOuterAlt(localContext, 10);
                {
                this.state = 69;
                this.block();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public block(): BlockContext {
        let localContext = new BlockContext(this.context, this.state);
        this.enterRule(localContext, 4, EVALParser.RULE_block);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 72;
            this.match(EVALParser.LBRACE);
            this.state = 76;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 274046) !== 0) || _la === 51 || _la === 62) {
                {
                {
                this.state = 73;
                this.statement();
                }
                }
                this.state = 78;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 79;
            this.match(EVALParser.RBRACE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public variableDeclaration(): VariableDeclarationContext {
        let localContext = new VariableDeclarationContext(this.context, this.state);
        this.enterRule(localContext, 6, EVALParser.RULE_variableDeclaration);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 81;
            this.type_();
            this.state = 82;
            this.match(EVALParser.IDENTIFIER);
            this.state = 83;
            this.match(EVALParser.ASSIGN);
            this.state = 84;
            this.expression(0);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public constDeclaration(): ConstDeclarationContext {
        let localContext = new ConstDeclarationContext(this.context, this.state);
        this.enterRule(localContext, 8, EVALParser.RULE_constDeclaration);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 86;
            this.match(EVALParser.CONST);
            this.state = 87;
            this.variableDeclaration();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public assignment(): AssignmentContext {
        let localContext = new AssignmentContext(this.context, this.state);
        this.enterRule(localContext, 10, EVALParser.RULE_assignment);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 89;
            this.match(EVALParser.IDENTIFIER);
            this.state = 90;
            this.assignOp();
            this.state = 91;
            this.expression(0);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public assignOp(): AssignOpContext {
        let localContext = new AssignOpContext(this.context, this.state);
        this.enterRule(localContext, 12, EVALParser.RULE_assignOp);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 93;
            _la = this.tokenStream.LA(1);
            if(!(((((_la - 35)) & ~0x1F) === 0 && ((1 << (_la - 35)) & 32783) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public breakStatement(): BreakStatementContext {
        let localContext = new BreakStatementContext(this.context, this.state);
        this.enterRule(localContext, 14, EVALParser.RULE_breakStatement);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 95;
            this.match(EVALParser.BREAK);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public continueStatement(): ContinueStatementContext {
        let localContext = new ContinueStatementContext(this.context, this.state);
        this.enterRule(localContext, 16, EVALParser.RULE_continueStatement);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 97;
            this.match(EVALParser.CONTINUE);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public type_(): TypeContext {
        let localContext = new TypeContext(this.context, this.state);
        this.enterRule(localContext, 18, EVALParser.RULE_type);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 99;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 30) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }

    public expression(): ExpressionContext;
    public expression(_p: number): ExpressionContext;
    public expression(_p?: number): ExpressionContext {
        if (_p === undefined) {
            _p = 0;
        }

        let parentContext = this.context;
        let parentState = this.state;
        let localContext = new ExpressionContext(this.context, parentState);
        let previousContext = localContext;
        let _startState = 20;
        this.enterRecursionRule(localContext, 20, EVALParser.RULE_expression, _p);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 119;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case EVALParser.MINUS:
                {
                localContext = new UnaryMinusExprContext(localContext);
                this.context = localContext;
                previousContext = localContext;

                this.state = 102;
                this.match(EVALParser.MINUS);
                this.state = 103;
                this.expression(12);
                }
                break;
            case EVALParser.NOT_OP:
                {
                localContext = new UnaryNotExprContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 104;
                this.match(EVALParser.NOT_OP);
                this.state = 105;
                this.expression(11);
                }
                break;
            case EVALParser.LPAREN:
                {
                localContext = new ParenExprContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 106;
                this.match(EVALParser.LPAREN);
                this.state = 107;
                this.expression(0);
                this.state = 108;
                this.match(EVALParser.RPAREN);
                }
                break;
            case EVALParser.CAST:
            case EVALParser.POW:
            case EVALParser.SQRT:
            case EVALParser.MIN:
            case EVALParser.MAX:
            case EVALParser.ROUND:
            case EVALParser.ABS:
                {
                localContext = new BuiltinExprContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 110;
                this.builtinFunc();
                }
                break;
            case EVALParser.PI:
            case EVALParser.DAYS_IN_WEEK:
            case EVALParser.HOURS_IN_DAY:
            case EVALParser.YEAR:
                {
                localContext = new MacroExprContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 111;
                this.macroValue();
                }
                break;
            case EVALParser.IDENTIFIER:
                {
                localContext = new IdentExprContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 112;
                this.match(EVALParser.IDENTIFIER);
                }
                break;
            case EVALParser.INTEGER:
                {
                localContext = new IntLiteralContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 113;
                this.match(EVALParser.INTEGER);
                }
                break;
            case EVALParser.REAL:
                {
                localContext = new RealLiteralContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 114;
                this.match(EVALParser.REAL);
                }
                break;
            case EVALParser.STRING:
                {
                localContext = new StringLiteralContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 115;
                this.match(EVALParser.STRING);
                }
                break;
            case EVALParser.TRUE:
                {
                localContext = new TrueLiteralContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 116;
                this.match(EVALParser.TRUE);
                }
                break;
            case EVALParser.FALSE:
                {
                localContext = new FalseLiteralContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 117;
                this.match(EVALParser.FALSE);
                }
                break;
            case EVALParser.NULL:
                {
                localContext = new NullLiteralContext(localContext);
                this.context = localContext;
                previousContext = localContext;
                this.state = 118;
                this.match(EVALParser.NULL);
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
            this.context!.stop = this.tokenStream.LT(-1);
            this.state = 141;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 5, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    if (this.parseListeners != null) {
                        this.triggerExitRuleEvent();
                    }
                    previousContext = localContext;
                    {
                    this.state = 139;
                    this.errorHandler.sync(this);
                    switch (this.interpreter.adaptivePredict(this.tokenStream, 4, this.context) ) {
                    case 1:
                        {
                        localContext = new LogicalOrExprContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, EVALParser.RULE_expression);
                        this.state = 121;
                        if (!(this.precpred(this.context, 18))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 18)");
                        }
                        this.state = 122;
                        this.match(EVALParser.OR_OP);
                        this.state = 123;
                        this.expression(19);
                        }
                        break;
                    case 2:
                        {
                        localContext = new LogicalAndExprContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, EVALParser.RULE_expression);
                        this.state = 124;
                        if (!(this.precpred(this.context, 17))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 17)");
                        }
                        this.state = 125;
                        this.match(EVALParser.AND_OP);
                        this.state = 126;
                        this.expression(18);
                        }
                        break;
                    case 3:
                        {
                        localContext = new EqualityExprContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, EVALParser.RULE_expression);
                        this.state = 127;
                        if (!(this.precpred(this.context, 16))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 16)");
                        }
                        this.state = 128;
                        (localContext as EqualityExprContext)._op = this.tokenStream.LT(1);
                        _la = this.tokenStream.LA(1);
                        if(!(_la === 44 || _la === 45)) {
                            (localContext as EqualityExprContext)._op = this.errorHandler.recoverInline(this);
                        }
                        else {
                            this.errorHandler.reportMatch(this);
                            this.consume();
                        }
                        this.state = 129;
                        this.expression(17);
                        }
                        break;
                    case 4:
                        {
                        localContext = new RelationalExprContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, EVALParser.RULE_expression);
                        this.state = 130;
                        if (!(this.precpred(this.context, 15))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 15)");
                        }
                        this.state = 131;
                        (localContext as RelationalExprContext)._op = this.tokenStream.LT(1);
                        _la = this.tokenStream.LA(1);
                        if(!(((((_la - 46)) & ~0x1F) === 0 && ((1 << (_la - 46)) & 15) !== 0))) {
                            (localContext as RelationalExprContext)._op = this.errorHandler.recoverInline(this);
                        }
                        else {
                            this.errorHandler.reportMatch(this);
                            this.consume();
                        }
                        this.state = 132;
                        this.expression(16);
                        }
                        break;
                    case 5:
                        {
                        localContext = new AdditiveExprContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, EVALParser.RULE_expression);
                        this.state = 133;
                        if (!(this.precpred(this.context, 14))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 14)");
                        }
                        this.state = 134;
                        (localContext as AdditiveExprContext)._op = this.tokenStream.LT(1);
                        _la = this.tokenStream.LA(1);
                        if(!(_la === 39 || _la === 40)) {
                            (localContext as AdditiveExprContext)._op = this.errorHandler.recoverInline(this);
                        }
                        else {
                            this.errorHandler.reportMatch(this);
                            this.consume();
                        }
                        this.state = 135;
                        this.expression(15);
                        }
                        break;
                    case 6:
                        {
                        localContext = new MultiplicativeExprContext(new ExpressionContext(parentContext, parentState));
                        this.pushNewRecursionContext(localContext, _startState, EVALParser.RULE_expression);
                        this.state = 136;
                        if (!(this.precpred(this.context, 13))) {
                            throw this.createFailedPredicateException("this.precpred(this.context, 13)");
                        }
                        this.state = 137;
                        (localContext as MultiplicativeExprContext)._op = this.tokenStream.LT(1);
                        _la = this.tokenStream.LA(1);
                        if(!(((((_la - 41)) & ~0x1F) === 0 && ((1 << (_la - 41)) & 7) !== 0))) {
                            (localContext as MultiplicativeExprContext)._op = this.errorHandler.recoverInline(this);
                        }
                        else {
                            this.errorHandler.reportMatch(this);
                            this.consume();
                        }
                        this.state = 138;
                        this.expression(14);
                        }
                        break;
                    }
                    }
                }
                this.state = 143;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 5, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.unrollRecursionContexts(parentContext);
        }
        return localContext;
    }
    public builtinFunc(): BuiltinFuncContext {
        let localContext = new BuiltinFuncContext(this.context, this.state);
        this.enterRule(localContext, 22, EVALParser.RULE_builtinFunc);
        try {
            this.state = 151;
            this.errorHandler.sync(this);
            switch (this.tokenStream.LA(1)) {
            case EVALParser.CAST:
                this.enterOuterAlt(localContext, 1);
                {
                this.state = 144;
                this.castCall();
                }
                break;
            case EVALParser.POW:
                this.enterOuterAlt(localContext, 2);
                {
                this.state = 145;
                this.powCall();
                }
                break;
            case EVALParser.SQRT:
                this.enterOuterAlt(localContext, 3);
                {
                this.state = 146;
                this.sqrtCall();
                }
                break;
            case EVALParser.MIN:
                this.enterOuterAlt(localContext, 4);
                {
                this.state = 147;
                this.minCall();
                }
                break;
            case EVALParser.MAX:
                this.enterOuterAlt(localContext, 5);
                {
                this.state = 148;
                this.maxCall();
                }
                break;
            case EVALParser.ROUND:
                this.enterOuterAlt(localContext, 6);
                {
                this.state = 149;
                this.roundCall();
                }
                break;
            case EVALParser.ABS:
                this.enterOuterAlt(localContext, 7);
                {
                this.state = 150;
                this.absCall();
                }
                break;
            default:
                throw new antlr.NoViableAltException(this);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public builtinCallStatement(): BuiltinCallStatementContext {
        let localContext = new BuiltinCallStatementContext(this.context, this.state);
        this.enterRule(localContext, 24, EVALParser.RULE_builtinCallStatement);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 153;
            this.printStatement();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public castCall(): CastCallContext {
        let localContext = new CastCallContext(this.context, this.state);
        this.enterRule(localContext, 26, EVALParser.RULE_castCall);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 155;
            this.match(EVALParser.CAST);
            this.state = 156;
            this.match(EVALParser.LPAREN);
            this.state = 157;
            this.expression(0);
            this.state = 158;
            this.match(EVALParser.COMMA);
            this.state = 159;
            this.type_();
            this.state = 160;
            this.match(EVALParser.RPAREN);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
